# nixos-config

./: .envrc  .gitignore  AGENTS.md  GOTCHAS.md  HEATMAP.md  MCP.md  README.md  SECRETS.md  STRUCTURE.md  config.nix  flake.nix  godot-template-audit-findings.md  graph-feasibility-report.md  graph-feasibility-verification.md  justfile  protondb-meccha-chameleon.md  steam-meccha-chameleon.md  suwayomi-backup.tachibk
.github/workflows/: README.md  (+16 more)
.opencode/: mcp.json  opencode.json
configurations/: AGENT.md
modules/: AGENT.md
overlays/: default.nix
scripts/: bootstrap.sh  join-iso.ps1  join-iso.sh  steamlink-deploy.sh  verify.sh
secrets/: .gitignore  agenix.bash  aws-cloud-ssh-pub-key.age  aws-cloud.age  aws-labs.age  flake.nix  github-token-nixos-config.age  github-token-obsidian.age  github-token.age  nixos-config-cache-token.age  nixos-config-git-token.age  obsidian-git-token.age  onepassword-token.age  reencrypt.bash  secrets.nix  spotify-cred.age  tailscale-apikey.age  tailscale-authkey.age  tailscale-ssh-key.age  windows-password.age  zeronsd-token.age  zerotier-token.age  zt-ssh-key.age  zt-ssh-key.pub
templates/textual-uv2nix/: .gitignore  AGENTS.md  GOTCHAS.md  HEATMAP.md  README.md  STRUCTURE.md  flake.nix  pyproject.toml
templates/textual-uv2nix/modules/: flake.nix
templates/textual-uv2nix/src/textual_app/: __main__.py  app.py
templates/textual-uv2nix/tests/: test_app.py
templates/uv2nix/: .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  GOTCHAS.md  HEATMAP.md  README.md  STRUCTURE.md  TESTS.md  flake.nix  pyproject.toml
templates/uv2nix/.github/workflows/: ci.yml  release.yml
templates/uv2nix/docs/guides/: nixos-integration.md
templates/uv2nix/docs/reference/: ci.md
templates/uv2nix/modules/: flake.nix  pyproject.nix  python-env.nix
templates/uv2nix/nix/: checks.nix  default.nix  home-module.nix  module.nix  overlay.nix  vm-tests.nix
templates/uv2nix/src/my_project/: __init__.py  __main__.py  utils.py
templates/uv2nix/src/textual_ui/: __init__.py  app.py
templates/uv2nix/src/textual_ui/cli/: main.py
templates/uv2nix/src/textual_ui/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
templates/uv2nix/src/textual_ui/widgets/: __init__.py
templates/uv2nix/src/uv2nix_template/: __init__.py  __main__.py  exceptions.py
templates/uv2nix/src/uv2nix_template/cli/: __init__.py  context.py  main.py
templates/uv2nix/src/uv2nix_template/cli/commands/: __init__.py  base.py  generate.py  init.py  validate.py
templates/uv2nix/src/uv2nix_template/core/: constants.py  exceptions.py  logging.py
templates/uv2nix/src/uv2nix_template/models/: __init__.py  base.py  config.py
templates/uv2nix/src/uv2nix_template/repositories/: base.py
templates/uv2nix/src/uv2nix_template/services/: __init__.py  base.py  config.py  generator.py  validator.py
templates/uv2nix/src/uv2nix_template/textual_ui/: __init__.py  app.py  base.py
templates/uv2nix/src/uv2nix_template/textual_ui/screens/: __init__.py  detail.py  main.py  search.py
templates/uv2nix/src/uv2nix_template/textual_ui/styles/: main.tcss
templates/uv2nix/src/uv2nix_template/utils/: functional.py  types.py
templates/uv2nix/tests/: conftest.py  test_utils.py
templates/uv2nix/tests/integration/: test_cli_invocation.py
templates/uv2nix/tests/nix_eval/: test_module_eval.py
templates/uv2nix/tests/nixos/: basic.nix
templates/uv2nix/tests/unit/: test_cli.py  test_commands.py  test_context.py  test_models.py  test_services.py  test_tui_base.py
terraform/: .envrc  .gitignore  backend.tf  default.nix  flake.nix  hosts.tf  main.tf  outputs.tf  variables.tf
tests/: core_test.nix
(+1000 files in other folders)
