[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.18.0"]

[project]
name = "textual-app"
version = "0.1.0"
description = "A Textual TUI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/textual_app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
