[project]
name = "uv2nix-template"
version = "0.1.0"
description = "uv2nix development template"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
# my-tool = "my_package.cli:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]

[tool.uv.sources]
# my-lib = { git = "https://github.com/org/my-lib.git" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["uv2nix_template"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
